Fixed random pages

--- a/web/modules/custom/sharjah_dd/templates/header.html.twig
+++ b/web/modules/custom/sharjah_dd/templates/header.html.twig
@@ -102,7 +102,8 @@
 							{{ drupal_block('language_block:language_interface', wrapper=false) }}
 						</div>
 						<div
-							class="flex items-center justify-center mt-8">{# <img src="{{ active_theme_path()}}//{{ active_theme_path()}}/assets/images/Logo2.svg" class="max-w-full" alt/> #}
+							class="flex items-center justify-center mt-8">
+							{# <img src="{{ active_theme_path()}}//{{ active_theme_path()}}/assets/images/Logo2.svg" class="max-w-full" alt/> #}
 						</div>
 
 					</div>
@@ -126,8 +127,11 @@
 					<button class="flex h-11 items-center border border-transparent gap-2.5 rounded-full bg-white px-4 transition-all hover:border-orange hover:bg-[#FFF3E9]  text-sm hover:text-orange">
 
 						<i class="fa-brands fa-accessible-icon  transition-all  "></i>
+						<script>(function(w,d,s,u,o){w._cyA11yConfig={"iconId":"default","position":{"mobile":"bottom-right","desktop":"bottom-right"},"language":{"default":"en","selected":[]}};var js=d.createElement(s),fjs=d.getElementsByTagName(s)[0];js.src=u;js.async=true;fjs.parentNode.insertBefore(js,fjs);})(window,document,"script","https://cdn-cookieyes.com/widgets/accessibility.js?id=a571becd-ffd7-452f-b677-ffae473ec81e");</script>
 
 					</button>
+
+
 					{{ drupal_block('language_block:language_interface', wrapper=false) }}
 				</div>
 			</div>
