--- a/web/themes/custom/theme_sdd/assets/css/style2.css
+++ b/web/themes/custom/theme_sdd/assets/css/style2.css
@@ -224,8 +224,14 @@ body {
   }
 }
 @layer utilities {
+  .\@container {
+    container-type: inline-size;
+  }
   .pointer-events-none {
     pointer-events: none;
+  }
+  .collapse {
+    visibility: collapse;
   }
   .invisible {
     visibility: hidden;
@@ -474,6 +480,9 @@ body {
   }
   .mb-8 {
     margin-bottom: calc(var(--spacing) * 8);
+  }
+  .mb-9 {
+    margin-bottom: calc(var(--spacing) * 9);
   }
   .mb-10 {
     margin-bottom: calc(var(--spacing) * 10);
@@ -1332,6 +1341,10 @@ body {
     font-size: var(--text-5xl);
     line-height: var(--tw-leading, var(--text-5xl--line-height));
   }
+  .text-6xl {
+    font-size: var(--text-6xl);
+    line-height: var(--tw-leading, var(--text-6xl--line-height));
+  }
   .text-lg {
     font-size: var(--text-lg);
     line-height: var(--tw-leading, var(--text-lg--line-height));
@@ -1529,6 +1542,9 @@ body {
   .\[site\:url-brief\] {
     site: url-brief;
   }
+  .\[site\:url\] {
+    site: url;
+  }
   .\[text-shadow\:0px_4px_4px_\#00000026\] {
     text-shadow: 0px 4px 4px #00000026;
   }
@@ -1543,6 +1559,9 @@ body {
   }
   .\[user\:edit-url\] {
     user: edit-url;
+  }
+  .\[user\:mail\] {
+    user: mail;
   }
   .\[user\:name\] {
     user: name;
@@ -1959,6 +1978,11 @@ body {
         content: var(--tw-content);
         display: none;
       }
+    }
+  }
+  .default\:block {
+    &:default {
+      display: block;
     }
   }
   .hover\:border-orange {
@@ -2733,6 +2757,11 @@ body {
   .md\:text-\[44px\] {
     @media (width >= 48rem) {
       font-size: 44px;
+    }
+  }
+  .md\:text-\[69px\] {
+    @media (width >= 48rem) {
+      font-size: 69px;
     }
   }
   .md\:font-normal {
