--- a/web/themes/custom/theme_sdd/assets/css/style2.css
+++ b/web/themes/custom/theme_sdd/assets/css/style2.css
@@ -224,6 +224,9 @@ body {
   }
 }
 @layer utilities {
+  .\@container {
+    container-type: inline-size;
+  }
   .pointer-events-none {
     pointer-events: none;
   }
@@ -474,6 +477,9 @@ body {
   }
   .mb-8 {
     margin-bottom: calc(var(--spacing) * 8);
+  }
+  .mb-9 {
+    margin-bottom: calc(var(--spacing) * 9);
   }
   .mb-10 {
     margin-bottom: calc(var(--spacing) * 10);
@@ -1332,6 +1338,10 @@ body {
     font-size: var(--text-5xl);
     line-height: var(--tw-leading, var(--text-5xl--line-height));
   }
+  .text-6xl {
+    font-size: var(--text-6xl);
+    line-height: var(--tw-leading, var(--text-6xl--line-height));
+  }
   .text-lg {
     font-size: var(--text-lg);
     line-height: var(--tw-leading, var(--text-lg--line-height));
@@ -1529,6 +1539,9 @@ body {
   .\[site\:url-brief\] {
     site: url-brief;
   }
+  .\[site\:url\] {
+    site: url;
+  }
   .\[text-shadow\:0px_4px_4px_\#00000026\] {
     text-shadow: 0px 4px 4px #00000026;
   }
@@ -1543,6 +1556,9 @@ body {
   }
   .\[user\:edit-url\] {
     user: edit-url;
+  }
+  .\[user\:mail\] {
+    user: mail;
   }
   .\[user\:name\] {
     user: name;
@@ -2744,6 +2760,11 @@ body {
   .md\:text-\[44px\] {
     @media (width >= 48rem) {
       font-size: 44px;
+    }
+  }
+  .md\:text-\[69px\] {
+    @media (width >= 48rem) {
+      font-size: 69px;
     }
   }
   .md\:font-normal {
