--- a/web/themes/custom/theme_sdd/templates/search/views-exposed-form--search.html.twig
+++ b/web/themes/custom/theme_sdd/templates/search/views-exposed-form--search.html.twig
@@ -25,7 +25,7 @@
 
 <div {{attributes.addClass(classes)}} id="services">
 	<section class="first-section pt-7">
-		<div class="container mx-auto px-4-">
+		<div class="container mx-auto px-4">
 			<div class="mb-8">
 				{% set keys = form.keys %}
 				{% set keys = keys|merge({
